--- a/index.html
+++ b/index.html
@@ -764,7 +764,7 @@ body {
   <audio id="musica-fondo" src="https://github.com/Baque2005/public-files/raw/refs/heads/main/2025/new%20west%20-%20those%20eyes%20%20sub.%20espa%C3%B1ol.mp3"></audio>
   <div id="pantalla-inicio" style="position:fixed;z-index:99999;top:0;left:0;width:100vw;height:100vh;background:#0a2a5a;display:flex;align-items:center;justify-content:center;flex-direction:column;">
     <img src="liceologo.png" alt="Liceologo" style="max-width: 20%; height: auto; margin-bottom: 2rem;">
-    <p style="color: white; font-size: 2rem; margin-bottom: 2rem; text-align: center;">Porque en liceo nunca serás espectador...</p>
+    <p style="color: white; font-size: 2rem; margin-bottom: 2rem; text-align: center;">Porque en Liceo nunca serás espectador...</p>
     <button id="btn-iniciar" style="font-size:2rem;padding:1em 2em;border-radius:1em;border:none;background:#fffbe7;color:#0a2a5a;box-shadow:0 2px 18px #0005;cursor:pointer;">apreta aquí</button>
   </div>
   <div id="contenido-web" style="display:none;">
